<resources>
    <string name="app_name">yuanshenlink</string>

    <string name="home_title">@string/app_name</string>
    <string name="home_api_title">API登录</string>
    <string name="home_api_subtitle">使用米哈游账户网页API进行登录, 无需加载网页资源内容, 可降低流量使用量</string>
    <string name="home_web_view_title">网页登录</string>
    <string name="home_web_view_subtitle">使用米哈游官网网页登录, 需要加载网页资源内容</string>
    <string name="home_button_get_started">开始</string>

    <string name="api_title">@string/home_api_title</string>
    <string name="api_tool">手机号/邮箱</string>
    <string name="api_verify_code">验证码</string>
    <string name="api_password">密码</string>
    <string name="api_transition_name">api_fragment</string>
    <string name="api_login">登录</string>

    <string name="web_view_title">@string/home_web_view_title</string>
    <string name="web_view_url">https://user.mihoyo.com</string>
    <string name="web_view_transition_name">web_view_transition_name</string>
    <string name="web_view_menu_done">完成</string>
    <string name="web_view_menu_refresh">刷新</string>

    <string name="snack_obtaining">正在获取账户信息, 请稍后…</string>
    <string name="snack_copied">链接已复制到剪贴板</string>

</resources>